# agent-eval

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
buildkite/: pipeline.yml  schedule.yml
docker/: Dockerfile  entrypoint.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSERTIONS.md  CLI_REFERENCE.md  EXTENDING.md  GRADING.md  JSON_SCHEMA.md  TROUBLESHOOTING.md
evals/: __init__.py
evals/configs/: ci-snapshot.json  version-manifest.json
evals/configs/baseline/: config.yaml
evals/configs/claude-md-only/: config.yaml
evals/configs/full/: config.yaml
evals/configs/skills-only/: config.yaml
evals/tasks/coding/: add-logging.task.yaml  add-pagination.task.yaml  add-rate-limiting.task.yaml  add-validation.task.yaml  fix-auth-bypass.task.yaml  fix-null-pointer.task.yaml  fix-race-condition.task.yaml
examples/getting-started/: README.md
examples/skill-testing/: README.md  run-comparison.sh
examples/skill-testing/fixtures/backend-api/: pyproject.toml
examples/skill-testing/fixtures/backend-api/src/: main.py
examples/skill-testing/fixtures/backend-api/tests/: test_tasks.py
fixtures/sample-project/: pyproject.toml
fixtures/sample-project/src/: auth.py  (+2 more)
harness/: __init__.py  __main__.py  config_exporter.py  config_importer.py  constants.py  container_executor.py  container_manager.py  executor.py  isolator.py  models.py  reporter.py  runner.py  scaffold.py  statistics.py
harness/graders/: __init__.py  code_graders.py  composite_grader.py  llm_graders.py
tests/: __init__.py  test_code_quality.py  test_models.py  test_statistics.py
(+49 files in other folders)
