[project]
name = "agent-eval"
version = "0.1.0"
description = "CI evaluation harness for multi-agent development environments. Detect regressions in agent instruction changes."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "textstat>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
eval-harness = "harness.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "evals"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
